feat: ga4gh broker timeout for the connection to rems

--- a/templates/ga4gh_broker/etc/ga4gh-broker/ga4gh-api.yaml.j2
+++ b/templates/ga4gh_broker/etc/ga4gh-broker/ga4gh-api.yaml.j2
@@ -23,6 +23,7 @@ brokers:
   jku: "{{ config.brokers.jku }}"
   issuer: "{{ config.brokers.issuer }}"
   path-to-jwk-file: "/etc/ga4gh-broker/jwks-keystore.jwks"
+  passport-repositories-timeout: "{{ config.brokers.passport_repositories_timeout }}"
   instances:
 {% for broker in config.brokers.instances | default([]) %}
     - name: "{{ broker.name }}"
